some operations are provided to calculate risk analysis

--- a/Cornerstech.Web/Views/Shared/_Layout.cshtml
+++ b/Cornerstech.Web/Views/Shared/_Layout.cshtml
@@ -94,6 +94,20 @@
                 </div>
             </li>
 
+            <!-- Nav Item - Pages Collapse Menu (Riskler) -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRisks"
+                   aria-expanded="true" aria-controls="collapseRisks">
+                    <i class="fas fa-fw fa-object-group"></i>
+                    <span>Risk Yönetimi</span>
+                </a>
+                <div id="collapseRisks" class="collapse" aria-labelledby="headingRisks" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="@Url.Action("Index", "Risk")">Risk Ölçütleri</a>
+                    </div>
+                </div>
+            </li>
+
                 <!-- Divider -->
                 <hr class="sidebar-divider">
 
