--- a/Cornerstech.Web/Views/Notification/Index.cshtml
+++ b/Cornerstech.Web/Views/Notification/Index.cshtml
@@ -9,15 +9,11 @@
     <div class="form-row">
         <div class="col-md-4 mb-6">
             <div class="input-group">
-                <input name="term" class="form-control" placeholder="Risk..." />
+                <input name="term" class="form-control" placeholder="İçerik..." />
                 <div class="input-group-append">
                     <button type="submit" class="btn btn-info btn-sm">Ara</button>
                 </div>
             </div>
-        </div>
-
-        <div class="col-md-8 offset-md-4 text-right">
-            <a href="@Url.Action("Create", "Risk")" class="btn btn-sm" style="background-color: #008170; color: white;">Ekle</a>
         </div>
     </div>
 </form>
