--- a/Cornerstech.Web/Views/Agreement/Edit.cshtml
+++ b/Cornerstech.Web/Views/Agreement/Edit.cshtml
@@ -68,5 +68,10 @@
 
     </div>
 
-    <button type="submit" class="btn btn-primary">Kaydet</button>
+    <div class="form-group row">
+        <div class="col-md-6 text-left">
+            <input type="submit" value="Kaydet" class="btn btn-primary" />
+            <a href="@Url.Action("Index", "Agreement")" class="btn btn-secondary">Listeye Dön</a>
+        </div>
+    </div>
 </form>
