--- a/Cornerstech.Web/Views/Home/Login.cshtml
+++ b/Cornerstech.Web/Views/Home/Login.cshtml
@@ -1,20 +1,113 @@
 ﻿@model Cornerstech.Web.Models.User.LoginViewModel
 
-@{
-    Layout = "~/Views/Shared/LoginLayout.cshtml";
-    ViewBag.Title = "Login";
-}
+<!DOCTYPE html>
+<html lang="en">
 
-<form asp-action="Login" method="post" class="login-form">
-    <div class="form-group col-md-12">
-        <input type="text" class="form-control" id="Username" asp-for="Username" placeholder="Kullanıcı Adı">
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Cornerstech - Giriş </title>
+
+    <!-- Custom fonts for this template-->
+    <link href="/Theme/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="/Theme/css/sb-admin-2.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            background: url('/Theme/img/login-image.png') no-repeat center center fixed;
+            background-size: cover;
+            position: relative;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+            body::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(255, 255, 255, 0.6); /* White overlay with 60% opacity */
+                z-index: 1;
+            }
+
+        .card {
+            width: 100%;
+            max-width: 500px; /* Adjust this value as needed */
+            position: relative;
+            z-index: 2;
+        }
+
+        .btn-primary {
+            background-color: #4E31AA;
+            border-color: #4E31AA;
+        }
+
+            .btn-primary:hover {
+                background-color: #3a2488;
+                border-color: #3a2488;
+            }
+
+        /* Validation message styles */
+        .text-danger {
+            color: #1E201E !important;
+        }
+    </style>
+
+</head>
+<body>
+
+    <div class="card o-hidden border-0 shadow-lg">
+        <div class="card-body p-0">
+            <!-- Card Body -->
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="p-5">
+                        @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "user" }))
+                        {
+                            <div class="form-group">
+                                <input type="text" class="form-control form-control-user" id="Username" asp-for="Username" placeholder="Kullanıcı Adı">
+                                <span asp-validation-for="Username" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control form-control-user" id="Password" asp-for="Password" placeholder="Parola">
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-user btn-block">Giriş Yap</button>
+                            <br />
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                            <hr>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group col-md-12">
-        <input type="password" class="form-control" id="Password" asp-for="Password" placeholder="Parola">
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary btn-lg btn-block">Giriş Yap</button>
-    <div class="validation-summary">
-        @Html.ValidationSummary()
-    </div>
-</form>
+
+    <!-- Bootstrap core JavaScript-->
+    <script src="/Theme/vendor/jquery/jquery.min.js"></script>
+    <script src="/Theme/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="/Theme/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="/Theme/js/sb-admin-2.min.js"></script>
+
+</body>
+
+</html>
