--- a/Cornerstech.Web/Views/Risk/Index.cshtml
+++ b/Cornerstech.Web/Views/Risk/Index.cshtml
@@ -57,10 +57,12 @@
                 </div>
             </div>
         </div>
-
-        <div class="col-md-8 offset-md-4 text-right">
-            <a href="@Url.Action("Create", "Risk")" class="btn btn-sm" style="background-color: #008170; color: white;">Ekle</a>
-        </div>
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="col-md-8 offset-md-4 text-right">
+                <a href="@Url.Action("Create", "Risk")" class="btn btn-sm" style="background-color: #008170; color: white;">Ekle</a>
+            </div>            
+        }
     </div>
 </form>
 
@@ -86,7 +88,10 @@
                 <th>
                     <a style="color: #304463">Risk Skoru (1-10000)</a> <i class="far fa-question-circle" title="Seviye * Gerçekleşme Sıklığı * Olasılık şeklinde hesaplanır."></i>
                 </th>
-                <th> </th>
+                @if (User.IsInRole("Admin"))
+                {
+                    <th> </th>
+                }
             </tr>
         </thead>
         <tbody>
@@ -106,11 +111,15 @@
                     <td>@GetFrequenceDescription(item.Frequence)</td>
                     <td>@GetPossibilityDescription(item.Possibility)</td>
                     <td>@((item.Level * item.Frequence * item.Possibility).ToString("F2"))</td>
-                    <td>
-                        <form asp-action="Delete" asp-route-id="@item.Id" method="post" onsubmit="return confirm('Bu riski silmek istediğinize emin misiniz?');">
-                            <button type="submit" class="btn btn-danger btn-sm" style="background-color: #C40C0C; border-color: #C40C0C;">Sil</button>
-                        </form>
-                    </td>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <td>
+                            <form asp-action="Delete" asp-route-id="@item.Id" method="post" onsubmit="return confirm('Bu riski silmek istediğinize emin misiniz?');">
+                                <button type="submit" class="btn btn-danger btn-sm" style="background-color: #C40C0C; border-color: #C40C0C;">Sil</button>
+                            </form>
+                        </td>
+                    }
+
                 </tr>
             }
         </tbody>
