--- a/Cornerstech.Web/Views/SubjectOfWork/Index.cshtml
+++ b/Cornerstech.Web/Views/SubjectOfWork/Index.cshtml
@@ -25,9 +25,12 @@
                 }
             </select>
         </div>
-        <div class="col-md-2 offset-md-3 mb-2">
-            <a href="@Url.Action("Create", "SubjectOfWork")" class="btn float-right btn-sm" style="background-color: #008170; color: white;">Ekle</a>
-        </div>
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="col-md-2 offset-md-3 mb-2">
+                <a href="@Url.Action("Create", "SubjectOfWork")" class="btn float-right btn-sm" style="background-color: #008170; color: white;">Ekle</a>
+            </div>
+        }
     </div>
 </form>
 
@@ -49,8 +52,11 @@
                 <th>
                     <a asp-action="Index" asp-route-sortOrder="Agreement" asp-route-sortDirection="@(ViewBag.CurrentSortOrder == "Subject" ? ViewBag.CurrentSortDirection : "asc")" style="color: #304463;">Anlaşmalar</a>
                 </th>
-                <th> </th>
-                <th> </th>
+                @if (User.IsInRole("Admin"))
+                {
+                    <th> </th>
+                    <th> </th>                    
+                }
             </tr>
         </thead>
         <tbody>
@@ -82,14 +88,17 @@
                     {
                         <td>-</td>
                     }
-                    <td>
-                        <a href="@Url.Action("Edit", "SubjectOfWork", new { id = item.Id })" class="btn btn-success btn-sm" style="background-color: #FFC94A; border-color: #FFC94A;">Düzenle</a>
-                    </td>
-                    <td>
-                        <form asp-action="Delete" asp-route-id="@item.Id" method="post" onsubmit="return confirm('Bu iş konusunu silmek istediğinize emin misiniz?');">
-                            <button type="submit" class="btn btn-danger btn-sm" style="background-color: #C40C0C; border-color: #C40C0C;">Sil</button>
-                        </form>
-                    </td>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <td>
+                            <a href="@Url.Action("Edit", "SubjectOfWork", new { id = item.Id })" class="btn btn-success btn-sm" style="background-color: #FFC94A; border-color: #FFC94A;">Düzenle</a>
+                        </td>
+                        <td>
+                            <form asp-action="Delete" asp-route-id="@item.Id" method="post" onsubmit="return confirm('Bu iş konusunu silmek istediğinize emin misiniz?');">
+                                <button type="submit" class="btn btn-danger btn-sm" style="background-color: #C40C0C; border-color: #C40C0C;">Sil</button>
+                            </form>
+                        </td>                        
+                    }
                 </tr>
             }
         </tbody>
